add functional test cases

--- a/packages/cli/test/functional/test_site/expected/testList.html
+++ b/packages/cli/test/functional/test_site/expected/testList.html
@@ -378,10 +378,10 @@
                 <li style="display: flex;"><span aria-hidden="true" class="fas fa-file-code" style="font-size: 30px; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">​</span>
                   <div>Sub-item B1</div>
                 </li>
-                <li style="display: flex;"><span aria-hidden="true" class="fas fa-file-code text-success" style="font-size: 30px; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">​</span>
+                <li style="display: flex;"><span aria-hidden="true" class="fas fa-file-code text-success" style="font-size: 30px; min-width: 16px; line-height: unset; margin-inline-end: 2rem; align-self: flex-start; flex-shrink: 0;">​</span>
                   <div>Sub-item B2</div>
                 </li>
-                <li style="display: flex;"><span aria-hidden="true" class="fas fa-file-code text-success" style="font-size: 30px; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">​</span>
+                <li style="display: flex;"><span aria-hidden="true" class="fas fa-file-code text-success" style="font-size: 30px; min-width: 16px; line-height: unset; margin-inline-end: 2rem; align-self: flex-start; flex-shrink: 0;">​</span>
                   <div>Sub-item B3
                     <ul style="list-style-type: none; padding-inline-start: 0px;">
                       <li style="display: flex;"><span style="padding-bottom: 0.3em; padding-top: 0.3em; font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;"><img src="/test_site/images/deer.jpg" alt="Icon" style="width: 50px; height: 50px; display: inline-block;">​​</span>
@@ -397,7 +397,7 @@
                     </ul>
                   </div>
                 </li>
-                <li style="display: flex;"><span aria-hidden="true" class="fas fa-file-code text-success" style="font-size: 30px; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">​</span>
+                <li style="display: flex;"><span aria-hidden="true" class="fas fa-file-code text-success" style="font-size: 30px; min-width: 16px; line-height: unset; margin-inline-end: 1rem; align-self: flex-start; flex-shrink: 0;">​</span>
                   <div>Sub-item B4</div>
                 </li>
               </ul>
