--- a/packages/cli/test/functional/test_site/expected/testList.html
+++ b/packages/cli/test/functional/test_site/expected/testList.html
@@ -729,6 +729,36 @@
           </li>
         </ul>
         <ol>
+          <li>One-off + customization + none with boolean one-off</li>
+        </ol>
+        <ul style="list-style-type: none; padding-inline-start: 0px;">
+          <li style="display: flex;"><span aria-hidden="true" class="glyphicon glyphicon-education" style="font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">​</span>
+            <div>Item A</div>
+          </li>
+          <li style="display: flex;"><span aria-hidden="true" class="fas fa-file-code" style="font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">​</span>
+            <div>Item B
+              <ul>
+                <li>Sub-item B1</li>
+                <li>Sub-item B2</li>
+                <li>Sub-item B3
+                  <ul style="list-style-type: none; padding-inline-start: 0px;">
+                    <li style="display: flex;"><span style="padding-bottom: 0.3em; padding-top: 0.3em; font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;"><img src="/test_site/images/deer.jpg" alt="Icon" style="width: 50px; display: inline-block;">​​</span>
+                      <div>Sub-sub-item B3.1</div>
+                    </li>
+                    <li style="display: flex;"><span style="padding-bottom: 0.3em; padding-top: 0.3em; font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;"><img src="/test_site/images/deer.jpg" alt="Icon" style="width: 50px; display: inline-block;">​​</span>
+                      <div>Sub-sub-item B3.2</div>
+                    </li>
+                  </ul>
+                </li>
+                <li>Sub-item B4</li>
+              </ul>
+            </div>
+          </li>
+          <li style="display: flex;"><span aria-hidden="true" class="fas fa-file-code" style="font-size: unset; min-width: 16px; line-height: unset; margin-inline-end: 0.35em; align-self: flex-start; flex-shrink: 0;">​</span>
+            <div>Item C</div>
+          </li>
+        </ul>
+        <ol>
           <li>Sub-level</li>
         </ol>
         <ul>
