--- a/packages/cli/test/functional/test_site_templates/test_project/expected/developerGuide/DeveloperGuide.html
+++ b/packages/cli/test/functional/test_site_templates/test_project/expected/developerGuide/DeveloperGuide.html
@@ -46,9 +46,6 @@
     </header>
     <div id="flex-body">
       <overlay-source id="site-nav" tag-name="nav" to="site-nav">
-        <div class="site-nav-top">
-          <div class="fw-bold mb-2" style="font-size: 1.25rem;">Site Map</div>
-        </div>
         <div class="nav-component slim-scroll">
           <site-nav>
             <overlay-source class="site-nav-list site-nav-list-root" tag-name="ul" to="mb-site-nav">
@@ -83,7 +80,17 @@
                 </div>
                 <ul class="site-nav-dropdown-container site-nav-dropdown-container-open site-nav-list">
                   <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/developerGuide/SettingUp.html">Setting Up</a></div>
+                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/developerGuide/SettingUp.html">Setting Up</a>
+
+                      <div class="site-nav-dropdown-btn-container"><i class="site-nav-dropdown-btn-icon" onclick="handleSiteNavClick(this.parentNode.parentNode, false); event.stopPropagation();">
+                          <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
+                        </i></div>
+                    </div>
+                    <ul class="site-nav-dropdown-container site-nav-list">
+                      <li>
+                        <div class="site-nav-default-list-item site-nav-list-item-2" onclick="handleSiteNavClick(this)"><a href="/developerGuide/TracingCode.html">Tutorial: Tracing code</a></div>
+                      </li>
+                    </ul>
                   </li>
                   <li>
                     <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/developerGuide/Design.html">Design</a></div>
@@ -129,9 +136,6 @@
                 </ul>
               </li>
               <li>
-                <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><a href="/developerGuide/TracingCode.html">Tutorial: Tracing code</a></div>
-              </li>
-              <li>
                 <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><a href="/team/AboutUs.html">About Us</a>
 
                   <div class="site-nav-dropdown-btn-container"><i class="site-nav-dropdown-btn-icon site-nav-rotate-icon" onclick="handleSiteNavClick(this.parentNode.parentNode, false); event.stopPropagation();">
@@ -151,8 +155,6 @@
       <div id="content-wrapper">
 
         <h1 id="projectex-developer-guide">ProjectEx Developer Guide<a class="fa fa-anchor" href="#projectex-developer-guide" onclick="event.stopPropagation()"></a></h1>
-
-        <div class="page-nav-print d-none d-print-block" v-pre></div>
         <hr>
         <h2 id="introduction">Introduction<a class="fa fa-anchor" href="#introduction" onclick="event.stopPropagation()"></a></h2>
         <p>Welcome to the Developer Guide. This guide helps developers understand the architecture, setup, and development workflows of our software, serving as your starting point and companion.</p>
@@ -164,7 +166,7 @@
           <li>Detail the setup process for a development environment.</li>
         </ol>
         <h2 id="acknowledgements"><strong>Acknowledgements</strong><a class="fa fa-anchor" href="#acknowledgements" onclick="event.stopPropagation()"></a></h2>
-        <p><em>{ list here sources of all reused/adapted ideas, code, documentation, and third-party libraries -- include links to the original source as well }</em></p>
+        <p><em>{ List and link sources of all reused/adapted ideas, code, documentation, and third-party libraries }</em></p>
       </div>
       <overlay-source id="page-nav" tag-name="nav" to="page-nav">
         <div class="nav-component slim-scroll">
