--- a/packages/cli/test/functional/test_site_templates/test_project/expected/developerGuide/Testing.html
+++ b/packages/cli/test/functional/test_site_templates/test_project/expected/developerGuide/Testing.html
@@ -46,9 +46,6 @@
     </header>
     <div id="flex-body">
       <overlay-source id="site-nav" tag-name="nav" to="site-nav">
-        <div class="site-nav-top">
-          <div class="fw-bold mb-2" style="font-size: 1.25rem;">Site Map</div>
-        </div>
         <div class="nav-component slim-scroll">
           <site-nav>
             <overlay-source class="site-nav-list site-nav-list-root" tag-name="ul" to="mb-site-nav">
@@ -83,7 +80,17 @@
                 </div>
                 <ul class="site-nav-dropdown-container site-nav-dropdown-container-open site-nav-list">
                   <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/developerGuide/SettingUp.html">Setting Up</a></div>
+                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/developerGuide/SettingUp.html">Setting Up</a>
+
+                      <div class="site-nav-dropdown-btn-container"><i class="site-nav-dropdown-btn-icon" onclick="handleSiteNavClick(this.parentNode.parentNode, false); event.stopPropagation();">
+                          <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
+                        </i></div>
+                    </div>
+                    <ul class="site-nav-dropdown-container site-nav-list">
+                      <li>
+                        <div class="site-nav-default-list-item site-nav-list-item-2" onclick="handleSiteNavClick(this)"><a href="/developerGuide/TracingCode.html">Tutorial: Tracing code</a></div>
+                      </li>
+                    </ul>
                   </li>
                   <li>
                     <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/developerGuide/Design.html">Design</a></div>
@@ -129,9 +136,6 @@
                 </ul>
               </li>
               <li>
-                <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><a href="/developerGuide/TracingCode.html">Tutorial: Tracing code</a></div>
-              </li>
-              <li>
                 <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><a href="/team/AboutUs.html">About Us</a>
 
                   <div class="site-nav-dropdown-btn-container"><i class="site-nav-dropdown-btn-icon site-nav-rotate-icon" onclick="handleSiteNavClick(this.parentNode.parentNode, false); event.stopPropagation();">
@@ -151,9 +155,6 @@
       <div id="content-wrapper">
 
         <h1 id="testing-guide">Testing guide<a class="fa fa-anchor" href="#testing-guide" onclick="event.stopPropagation()"></a></h1>
-
-        <div class="page-nav-print d-none d-print-block" v-pre></div>
-
         <box type="tip">
           This page can be used to understand the testing processes.
         </box>
