--- a/packages/cli/test/functional/test_site_templates/test_project/expected/userGuide/FAQ.html
+++ b/packages/cli/test/functional/test_site_templates/test_project/expected/userGuide/FAQ.html
@@ -46,9 +46,6 @@
     </header>
     <div id="flex-body">
       <overlay-source id="site-nav" tag-name="nav" to="site-nav">
-        <div class="site-nav-top">
-          <div class="fw-bold mb-2" style="font-size: 1.25rem;">Site Map</div>
-        </div>
         <div class="nav-component slim-scroll">
           <site-nav>
             <overlay-source class="site-nav-list site-nav-list-root" tag-name="ul" to="mb-site-nav">
@@ -83,7 +80,17 @@
                 </div>
                 <ul class="site-nav-dropdown-container site-nav-dropdown-container-open site-nav-list">
                   <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/developerGuide/SettingUp.html">Setting Up</a></div>
+                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/developerGuide/SettingUp.html">Setting Up</a>
+
+                      <div class="site-nav-dropdown-btn-container"><i class="site-nav-dropdown-btn-icon" onclick="handleSiteNavClick(this.parentNode.parentNode, false); event.stopPropagation();">
+                          <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
+                        </i></div>
+                    </div>
+                    <ul class="site-nav-dropdown-container site-nav-list">
+                      <li>
+                        <div class="site-nav-default-list-item site-nav-list-item-2" onclick="handleSiteNavClick(this)"><a href="/developerGuide/TracingCode.html">Tutorial: Tracing code</a></div>
+                      </li>
+                    </ul>
                   </li>
                   <li>
                     <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/developerGuide/Design.html">Design</a></div>
@@ -129,9 +136,6 @@
                 </ul>
               </li>
               <li>
-                <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><a href="/developerGuide/TracingCode.html">Tutorial: Tracing code</a></div>
-              </li>
-              <li>
                 <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><a href="/team/AboutUs.html">About Us</a>
 
                   <div class="site-nav-dropdown-btn-container"><i class="site-nav-dropdown-btn-icon site-nav-rotate-icon" onclick="handleSiteNavClick(this.parentNode.parentNode, false); event.stopPropagation();">
@@ -150,23 +154,20 @@
       </overlay-source>
       <div id="content-wrapper">
 
-
-        <div class="page-nav-print d-none d-print-block" v-pre></div>
-
         <h1 id="faq">FAQ<a class="fa fa-anchor" href="#faq" onclick="event.stopPropagation()"></a></h1>
         <box type="tip">
           This section answers common questions about the app or specific features.
         </box>
         <panel><template #header>
-            <p><strong>Question:</strong> How do I learn to use MarkBind?</p>
+            <p><strong>Question:</strong> How do I learn to use this project?</p>
           </template>
-          <p><strong>Answer:</strong> Refer to the <a href="https://markbind.org/userGuide/gettingStarted.html">User Guide</a>.</p>
+          <p><strong>Answer:</strong> Refer to the <a href="/userGuide/UserGuide.html">User Guide</a>.</p>
         </panel>
         <br>
         <panel><template #header>
-            <p><strong>Question:</strong> How do I contribute to MarkBind?</p>
+            <p><strong>Question:</strong> How do I contribute to this project?</p>
           </template>
-          <p><strong>Answer:</strong> Refer to the <a href="https://markbind.org/devdocs/devGuide/devGuide.html">Developer Guide</a>.</p>
+          <p><strong>Answer:</strong> Refer to the <a href="/developerGuide/DeveloperGuide.html">Developer Guide</a>.</p>
         </panel>
       </div>
       <overlay-source id="page-nav" tag-name="nav" to="page-nav">
