--- a/packages/cli/test/functional/test_site/expected/index.html
+++ b/packages/cli/test/functional/test_site/expected/index.html
@@ -798,20 +798,26 @@
             <popover id="pop:footnotefn-2-1">
               <template #content>
                 <div>
-                  null
+                  <p>footnote1</p>
+
                 </div>
               </template>
             </popover>
             <popover id="pop:footnotefn-2-2">
               <template #content>
                 <div>
-                  null
+                  <p>footnote2</p>
+
                 </div>
               </template>
             </popover>
 
-            <li id="fn-2-1" class="footnote-item">null</li>
-            <li id="fn-2-2" class="footnote-item">null</li>
+            <li id="fn-2-1" class="footnote-item">
+              <p>footnote1</p>
+            </li>
+            <li id="fn-2-2" class="footnote-item">
+              <p>footnote2</p>
+            </li>
 
           </ol>
         </section>
