--- a/packages/cli/test/functional/test_site_templates/test_project/expected/developerGuide/Implementation.html
+++ b/packages/cli/test/functional/test_site_templates/test_project/expected/developerGuide/Implementation.html
@@ -179,15 +179,15 @@
         <panel><template #header>
             <p><strong>Alternative 1 (current choice):</strong> Implementation 1</p>
           </template>
-          <p>Pros: Easy to implement.</p>
-          <p>Cons: May have performance issues in terms of memory usage.</p>
+          Pros: Easy to implement.<br>
+          Cons: May have performance issues in terms of memory usage.
         </panel>
         <br>
         <panel><template #header>
             <p><strong>Alternative 2:</strong> Implementation 2</p>
           </template>
-          <p>Pros: Will use less memory.</p>
-          <p>Cons: We must add addtional test cases.</p>
+          Pros: Will use less memory.<br>
+          Cons: We must add addtional test cases.
         </panel>
         <br>
         <p><em>{ More aspects and alternatives to be added }</em></p>
