--- a/packages/cli/test/functional/test_site_templates/test_project/expected/userGuide/Features.html
+++ b/packages/cli/test/functional/test_site_templates/test_project/expected/userGuide/Features.html
@@ -189,7 +189,7 @@
         <panel><template #header>
             <p>Feature Examples</p>
           </template>
-          <p>Examples of how to use the feature.</p>
+          Examples of how to use the feature.
         </panel>
         <box type="tip" seamless>
           <p><strong>Tip:</strong> Secondary information about feature usage.</p>
